# Python_for_Data_Science

Python - 1 - Array/ex00/: give_bmi.py
Python - 1 - Array/ex01/: array2D.py
Python - 1 - Array/ex02/: load_image.py  test.py
Python - 1 - Array/ex03/: load_image.py  zoom.py
Python - 1 - Array/ex04/: rotate.py
Python - 1 - Array/ex05/: pimp_image.py  tester.py
python_0_starting/ex00/: Hello.py
python_0_starting/ex01/: format_ft_time.py
python_0_starting/ex02/: find_ft_type.py
python_0_starting/ex03/: NULL_not_found.py  tester.py
python_0_starting/ex04/: whatis.py
python_0_starting/ex05/: building.py
python_0_starting/ex06/: filterstring.py  ft_filter.py
python_0_starting/ex07/: sos.py
python_0_starting/ex08/: Loading.py
python_0_starting/ex09/: LICENSE  README.md  pyproject.toml
python_0_starting/ex09/ft_package/: __init__.py
