[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    { name="aachaq", email="aachaq@student.1337.ma" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
